--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	border-radius: 1.5em;
 	background-color: yellow;
 	}
+.two {
+}
 	.tree{
 	float: right;
 	text-align: center;
@@ -68,8 +70,8 @@
                       <input type="submit" value="완료">
             </fieldset>
  </form>
-<p class="one">이 홈페이지가 들어와 지신다면 주인장의 컴퓨터가 켜져있다는 겁니다!</p>
-<br>
+<p class="one">이 홈페이지가 들어와 지신다면 주인장의 컴퓨터가 켜져있다는 겁니다!!</p>
+ <br>
 <article class="two">레이어 나누기!</article><article class="two">레이어 나누기2!</article>
 <article class="tree">가나다라</article>
 <form action="tttt.php" method="POST">
