--- a/getip.html
+++ b/getip.html
@@ -1,3 +1,3 @@
-<script type="text/javascript" src="http://jsgetip.appspot.com"></script><script>
-document.write( ip() );
-</script>
+<?php
+  echo $_SERVER['REMOTE_ADDR'];
+?>
