--- a/getip.html
+++ b/getip.html
@@ -1,3 +1,3 @@
-<?php
-  echo $_SERVER['REMOTE_ADDR'];
-?>
+<script type="text/javascript" src="http://jsgetip.appspot.com"></script><script>
+document.write( ip() );
+</script>
