--- a/MBS_WEB_DB/DB/Stock.html
+++ b/MBS_WEB_DB/DB/Stock.html
@@ -34,5 +34,5 @@
     document.writeln("연화,200,"+(Math.floor(Math.random() * 10000) + 1));
     document.writeln("박성pc,200,"+(Math.floor(Math.random() * 10000) + 1));
     document.writeln("키라미디어,200,"+(Math.floor(Math.random() * 10000) + 1));
-    document.writelnln("</pre>");
+    document.writeln("</pre>");
   </script>
