--- a/index.html
+++ b/index.html
@@ -1,80 +1,272 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
+
 <head>
-<style>
-	.one{
-	text-align: center;
-	width: 100%;
-	height: 100px;
-	border: 2px blue;
-	border-style: dotted;
-	border-radius: 1.5em;
-	background-color: yellow;
-	}
-	.two{
-	float: left;
-	text-align: center;
-	width: 500px;
-	height: 100px;
-	border: 2px blue;
-	border-style: dotted;
-	border-radius: 1.5em;
-	background-color: yellow;
-	}
-.two {
-}
-	.tree{
-	float: right;
-	text-align: center;
-	width: 300px;
-	height: 100px;
-	border: 2px blue;
-	border-style: dotted;
-	border-radius: 1.5em;
-	background-color: yellow;
-	}
-	.p{
-	border:10px solid blue;
-	border-style:ridge;
-	}
-	nav{
-	background-color: #ddd;	
-	height: 45px;
-	padding: 6px 7px;
-	border-radius: 1.5em;
-	}
-	nav p{
-	border-radius:8px
-	}
-	footer{
-	clear: left;
-	text-align:center;
-	border-radius:80px;
-	height: 50px;
-	background-color: #ddd;
-	}
-</style>
-	<meta charset="utf-8">
-	<title>홈페이지 연습</title>
-	<script src="자바.js" type="text/javascript"> </script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
-<body>
-<nav>
 
-	<p>이 사이트는 연습용 입니다. 문제나 궁금한 점이 있다면 연락주세요.</p>
-</nav>
- <form id="test">
-           <fieldset>
-                      <legend>다중 파일 업로드하기</legend>
-                      <input accept="image/* id="files-upload" type="file" multiple><br>
-                      <input type="submit" value="완료">
-            </fieldset>
- </form>
+<body style="background-color: lightgrey;">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a class="navbar-brand" href="#">O JungMin</a>
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">about <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Project <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">Link</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownId">
+                        <li>
+                            <a class="dropdown-item" href="https://github.com/owjs3901">
+                                <img style="display: inline; width: 30px;"
+                                    src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
+                                Github
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">Blog</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <div class="container mt-sm-5">
+        <ul class="nav nav-pills">
+            <li class="nav-item bg-light rounded-top">
+                <a class="nav-link active" data-toggle="pill" href="#home">Intro</a>
+            </li>
+            <li class="nav-item bg-light rounded-top">
+                <a class="nav-link" data-toggle="pill" href="#menu1">History</a>
+            </li>
+            <li class="nav-item bg-light rounded-top">
+                <a class="nav-link" data-toggle="pill" href="#menu2">Contact</a>
+            </li>
+        </ul>
+    </div>
+    <div class="container bg-light rounded">
+        <!-- Nav pills -->
 
-<footer>
-	<span class="ww">footer 연습</sapn>
-	<br>
-	<address>E-mail : owjs3901@naver.com</address>
-</footer>
+        <!-- Tab panes -->
+        <div class="tab-content p-5">
+            <div class="tab-pane container active" id="home">
+                <h1>
+                    오정민
+                </h1>
+                <p class="mt-3 ml-2">
+                    펑벙한 개발자
+                </p>
+            </div>
+            <div class="tab-pane container fade" id="menu1">
+                <div class="row">
+                    <!-- timeline item 1 left dot -->
+                    <div class="col-auto text-center flex-column d-none d-sm-flex">
+                        <div class="row h-50">
+                            <div class="col">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                        <h5 class="m-2">
+                            <span class="badge badge-pill bg-light border">&nbsp;</span>
+                        </h5>
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                    </div>
+                    <!-- timeline item 1 event content -->
+                    <div class="col py-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="float-right text-muted">Mon, Jan 9th 2019 7:00 AM</div>
+                                <h4 class="card-title text-muted">Day 1 Orientation</h4>
+                                <p class="card-text">Welcome to the campus, introduction and get started with the tour.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/row-->
+                <!-- timeline item 2 -->
+                <div class="row">
+                    <div class="col-auto text-center flex-column d-none d-sm-flex">
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                        <h5 class="m-2">
+                            <span class="badge badge-pill border">&nbsp;</span>
+                        </h5>
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="card border-right">
+                            <div class="card-body">
+                                <div class="float-right ">Tue, Jan 10th 2019 8:30 AM</div>
+                                <h4 class="card-title ">Day 2 Sessions</h4>
+                                <p class="card-text">Sign-up for the lessons and speakers that coincide with your course
+                                    syllabus. Meet and greet with instructors.</p>
+                                <button class="btn btn-sm btn-outline-secondary" type="button" data-target="#t2_details"
+                                    data-toggle="collapse">Show Details ▼</button>
+                                <div class="collapse border" id="t2_details">
+                                    <div class="p-2 text-monospace">
+                                        <div>08:30 - 09:00 Breakfast in CR 2A</div>
+                                        <div>09:00 - 10:30 Live sessions in CR 3</div>
+                                        <div>10:30 - 10:45 Break</div>
+                                        <div>10:45 - 12:00 Live sessions in CR 3</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/row-->
+                <!-- timeline item 3 -->
+                <div class="row">
+                    <div class="col-auto text-center flex-column d-none d-sm-flex">
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                        <h5 class="m-2">
+                            <span class="badge badge-pill bg-light border">&nbsp;</span>
+                        </h5>
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="float-right text-muted">Wed, Jan 11th 2019 8:30 AM</div>
+                                <h4 class="card-title">Day 3 Sessions</h4>
+                                <p>Shoreditch vegan artisan Helvetica. Tattooed Codeply Echo Park Godard kogi, next
+                                    level irony ennui twee squid fap selvage. Meggings flannel Brooklyn literally small
+                                    batch, mumblecore PBR try-hard kale chips. Brooklyn vinyl lumbersexual
+                                    bicycle rights, viral fap cronut leggings squid chillwave pickled gentrify mustache.
+                                    3 wolf moon hashtag church-key Odd Future. Austin messenger bag normcore, Helvetica
+                                    Williamsburg sartorial tote bag distillery Portland before
+                                    they sold out gastropub taxidermy Vice.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/row-->
+                <!-- timeline item 4 -->
+                <div class="row">
+                    <div class="col-auto text-center flex-column d-none d-sm-flex">
+                        <div class="row h-50">
+                            <div class="col border-right">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                        <h5 class="m-2">
+                            <span class="badge badge-pill bg-light border">&nbsp;</span>
+                        </h5>
+                        <div class="row h-50">
+                            <div class="col">&nbsp;</div>
+                            <div class="col">&nbsp;</div>
+                        </div>
+                    </div>
+                    <div class="col py-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="float-right text-muted">Thu, Jan 12th 2019 11:30 AM</div>
+                                <h4 class="card-title">Day 4 Wrap-up</h4>
+                                <p>Join us for lunch in Bootsy's cafe across from the Campus Center.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/row-->
+            </div>
+            <div class="tab-pane container fade" id="menu2">...</div>
+        </div>
+    </div>
+
+
+    <div class="container bg-light mt-sm-5">
+        <div class="row">
+            <div class="col-md-3 p-2">
+                <div class="card">
+                    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="height:300px">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 p-2">
+                <div class="card">
+                    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="height:300px">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 p-2">
+                <div class="card">
+                    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="height:300px">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 p-2">
+                <div class="card">
+                    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="height:300px">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 p-2">
+                <div class="card">
+                    <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="height:300px">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
