--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
         </div>
     </nav>
     <div class="container mt-sm-5">
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#home" role="tab"
+                    aria-controls="nav-home" aria-selected="true">Home</a>
+                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#menu1" role="tab"
+                    aria-controls="nav-profile" aria-selected="false">Profile</a>
+                <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#menu2" role="tab"
+                    aria-controls="nav-contact" aria-selected="false">Contact</a>
+            </div>
+        </nav>
+        <!-- 
         <ul class="nav nav-pills">
             <li class="nav-item bg-light rounded-top">
                 <a class="nav-link active" data-toggle="pill" href="#home">Intro</a>
@@ -59,14 +70,14 @@
             <li class="nav-item bg-light rounded-top">
                 <a class="nav-link" data-toggle="pill" href="#menu2">Contact</a>
             </li>
-        </ul>
+        </ul> -->
     </div>
     <div class="container bg-light rounded">
         <!-- Nav pills -->
 
         <!-- Tab panes -->
         <div class="tab-content p-5">
-            <div class="tab-pane container active" id="home">
+            <div class="tab-pane container active fade show" id="home">
                 <h1>
                     오정민
                 </h1>
@@ -75,126 +86,171 @@
                 </p>
             </div>
             <div class="tab-pane container fade" id="menu1">
-                <div class="row">
-                    <!-- timeline item 1 left dot -->
-                    <div class="col-auto text-center flex-column d-none d-sm-flex">
-                        <div class="row h-50">
-                            <div class="col">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                        <h5 class="m-2">
-                            <span class="badge badge-pill bg-light border">&nbsp;</span>
-                        </h5>
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                    </div>
-                    <!-- timeline item 1 event content -->
-                    <div class="col py-2">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="float-right text-muted">Mon, Jan 9th 2019 7:00 AM</div>
-                                <h4 class="card-title text-muted">Day 1 Orientation</h4>
-                                <p class="card-text">Welcome to the campus, introduction and get started with the tour.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row justify-content-md-center mb-5">
+                    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
+                                role="tab" aria-controls="pills-home" aria-selected="true">Dev</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
+                                role="tab" aria-controls="pills-profile" aria-selected="false">Web</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
+                                role="tab" aria-controls="pills-contact" aria-selected="false">Embedded</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
+                                role="tab" aria-controls="pills-contact" aria-selected="false">Mobile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact"
+                                role="tab" aria-controls="pills-contact" aria-selected="false">Server</a>
+                        </li>
+                    </ul>
+
+
                 </div>
-                <!--/row-->
-                <!-- timeline item 2 -->
                 <div class="row">
-                    <div class="col-auto text-center flex-column d-none d-sm-flex">
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                        <h5 class="m-2">
-                            <span class="badge badge-pill border">&nbsp;</span>
-                        </h5>
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                    </div>
-                    <div class="col py-2">
-                        <div class="card border-right">
-                            <div class="card-body">
-                                <div class="float-right ">Tue, Jan 10th 2019 8:30 AM</div>
-                                <h4 class="card-title ">Day 2 Sessions</h4>
-                                <p class="card-text">Sign-up for the lessons and speakers that coincide with your course
-                                    syllabus. Meet and greet with instructors.</p>
-                                <button class="btn btn-sm btn-outline-secondary" type="button" data-target="#t2_details"
-                                    data-toggle="collapse">Show Details ▼</button>
-                                <div class="collapse border" id="t2_details">
-                                    <div class="p-2 text-monospace">
-                                        <div>08:30 - 09:00 Breakfast in CR 2A</div>
-                                        <div>09:00 - 10:30 Live sessions in CR 3</div>
-                                        <div>10:30 - 10:45 Break</div>
-                                        <div>10:45 - 12:00 Live sessions in CR 3</div>
+
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                            aria-labelledby="pills-home-tab">
+                            <div class="row">
+                                <!-- timeline item 1 left dot -->
+                                <div class="col-auto text-center flex-column d-none d-sm-flex">
+                                    <div class="row h-50">
+                                        <div class="col">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                    <h5 class="m-2">
+                                        <span class="badge badge-pill bg-light border">&nbsp;</span>
+                                    </h5>
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                </div>
+                                <!-- timeline item 1 event content -->
+                                <div class="col py-2">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="float-right text-muted">Mon, Jan 9th 2019 7:00 AM</div>
+                                            <h4 class="card-title text-muted">Day 1 Orientation</h4>
+                                            <p class="card-text">Welcome to the campus, introduction and get started
+                                                with the tour.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/row-->
+                            <!-- timeline item 2 -->
+                            <div class="row">
+                                <div class="col-auto text-center flex-column d-none d-sm-flex">
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                    <h5 class="m-2">
+                                        <span class="badge badge-pill border">&nbsp;</span>
+                                    </h5>
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                </div>
+                                <div class="col py-2">
+                                    <div class="card border-right">
+                                        <div class="card-body">
+                                            <div class="float-right ">Tue, Jan 10th 2019 8:30 AM</div>
+                                            <h4 class="card-title ">Day 2 Sessions</h4>
+                                            <p class="card-text">Sign-up for the lessons and speakers that coincide with
+                                                your course
+                                                syllabus. Meet and greet with instructors.</p>
+                                            <button class="btn btn-sm btn-outline-secondary" type="button"
+                                                data-target="#t2_details" data-toggle="collapse">Show Details ▼</button>
+                                            <div class="collapse border" id="t2_details">
+                                                <div class="p-2 text-monospace">
+                                                    <div>08:30 - 09:00 Breakfast in CR 2A</div>
+                                                    <div>09:00 - 10:30 Live sessions in CR 3</div>
+                                                    <div>10:30 - 10:45 Break</div>
+                                                    <div>10:45 - 12:00 Live sessions in CR 3</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/row-->
+                            <!-- timeline item 3 -->
+                            <div class="row">
+                                <div class="col-auto text-center flex-column d-none d-sm-flex">
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                    <h5 class="m-2">
+                                        <span class="badge badge-pill bg-light border">&nbsp;</span>
+                                    </h5>
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                </div>
+                                <div class="col py-2">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="float-right text-muted">Wed, Jan 11th 2019 8:30 AM</div>
+                                            <h4 class="card-title">Day 3 Sessions</h4>
+                                            <p>Shoreditch vegan artisan Helvetica. Tattooed Codeply Echo Park Godard
+                                                kogi, next
+                                                level irony ennui twee squid fap selvage. Meggings flannel Brooklyn
+                                                literally small
+                                                batch, mumblecore PBR try-hard kale chips. Brooklyn vinyl lumbersexual
+                                                bicycle rights, viral fap cronut leggings squid chillwave pickled
+                                                gentrify mustache.
+                                                3 wolf moon hashtag church-key Odd Future. Austin messenger bag
+                                                normcore, Helvetica
+                                                Williamsburg sartorial tote bag distillery Portland before
+                                                they sold out gastropub taxidermy Vice.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/row-->
+                            <!-- timeline item 4 -->
+                            <div class="row">
+                                <div class="col-auto text-center flex-column d-none d-sm-flex">
+                                    <div class="row h-50">
+                                        <div class="col border-right">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                    <h5 class="m-2">
+                                        <span class="badge badge-pill bg-light border">&nbsp;</span>
+                                    </h5>
+                                    <div class="row h-50">
+                                        <div class="col">&nbsp;</div>
+                                        <div class="col">&nbsp;</div>
+                                    </div>
+                                </div>
+                                <div class="col py-2">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="float-right text-muted">Thu, Jan 12th 2019 11:30 AM</div>
+                                            <h4 class="card-title">Day 4 Wrap-up</h4>
+                                            <p>Join us for lunch in Bootsy's cafe across from the Campus Center.</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <!--/row-->
-                <!-- timeline item 3 -->
-                <div class="row">
-                    <div class="col-auto text-center flex-column d-none d-sm-flex">
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                        <h5 class="m-2">
-                            <span class="badge badge-pill bg-light border">&nbsp;</span>
-                        </h5>
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                    </div>
-                    <div class="col py-2">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="float-right text-muted">Wed, Jan 11th 2019 8:30 AM</div>
-                                <h4 class="card-title">Day 3 Sessions</h4>
-                                <p>Shoreditch vegan artisan Helvetica. Tattooed Codeply Echo Park Godard kogi, next
-                                    level irony ennui twee squid fap selvage. Meggings flannel Brooklyn literally small
-                                    batch, mumblecore PBR try-hard kale chips. Brooklyn vinyl lumbersexual
-                                    bicycle rights, viral fap cronut leggings squid chillwave pickled gentrify mustache.
-                                    3 wolf moon hashtag church-key Odd Future. Austin messenger bag normcore, Helvetica
-                                    Williamsburg sartorial tote bag distillery Portland before
-                                    they sold out gastropub taxidermy Vice.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--/row-->
-                <!-- timeline item 4 -->
-                <div class="row">
-                    <div class="col-auto text-center flex-column d-none d-sm-flex">
-                        <div class="row h-50">
-                            <div class="col border-right">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                        <h5 class="m-2">
-                            <span class="badge badge-pill bg-light border">&nbsp;</span>
-                        </h5>
-                        <div class="row h-50">
-                            <div class="col">&nbsp;</div>
-                            <div class="col">&nbsp;</div>
-                        </div>
-                    </div>
-                    <div class="col py-2">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="float-right text-muted">Thu, Jan 12th 2019 11:30 AM</div>
-                                <h4 class="card-title">Day 4 Wrap-up</h4>
-                                <p>Join us for lunch in Bootsy's cafe across from the Campus Center.</p>
-                            </div>
-                        </div>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                            aria-labelledby="pills-profile-tab">..2.</div>
+                        <div class="tab-pane fade" id="pills-contact" role="tabpanel"
+                            aria-labelledby="pills-contact-tab">..2.</div>
+
                     </div>
                 </div>
                 <!--/row-->
