home, about, nav 작업

--- a/old/index.html
+++ b/old/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Nav <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">about <span class="sr-only">(current)</span></a>
@@ -52,14 +52,14 @@
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#home" role="tab"
-                    aria-controls="nav-home" aria-selected="true">Home</a>
+                    aria-controls="nav-home" aria-selected="true">Nav</a>
                 <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#menu1" role="tab"
                     aria-controls="nav-profile" aria-selected="false">Profile</a>
                 <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#menu2" role="tab"
                     aria-controls="nav-contact" aria-selected="false">Contact</a>
             </div>
         </nav>
-        <!-- 
+        <!--
         <ul class="nav nav-pills">
             <li class="nav-item bg-light rounded-top">
                 <a class="nav-link active" data-toggle="pill" href="#home">Intro</a>
