--- a/old/index.html
+++ b/old/index.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="#">about <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Project <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">History <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
